fix partition for residents

--- a/ExampleGradientBoosting.ipynb
+++ b/ExampleGradientBoosting.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "d3c23173",
    "metadata": {},
    "outputs": [],
@@ -737,12 +737,14 @@
     "        (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1)\n",
     "    )},\n",
     "    {\"name\": \"less_established_residents_non_Dutch\", \"condition\": lambda df: (\n",
-    "        (df['adres_dagen_op_adres'] <= 1825) &\n",
+    "        (df['adres_dagen_op_adres'] < 1825) &\n",
+    "        (df['adres_dagen_op_adres'] >= 365) &\n",
     "        (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
     "        (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0)\n",
     "    )},\n",
     "    {\"name\": \"less_established_residents_Dutch\", \"condition\": lambda df: (\n",
-    "        (df['adres_dagen_op_adres'] <= 1825) &\n",
+    "        (df['adres_dagen_op_adres'] < 1825) &\n",
+    "        (df['adres_dagen_op_adres'] >= 365) &\n",
     "        (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
     "        (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1)\n",
     "    )},\n",
@@ -1066,7 +1068,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv-onnx",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1080,7 +1082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
