add feature weights for biased model

--- a/ExampleGradientBoosting_bad_model.ipynb
+++ b/ExampleGradientBoosting_bad_model.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8e81b41d",
    "metadata": {},
    "outputs": [
@@ -77,30 +77,50 @@
     "# Filter dataframe to only biased variables\n",
     "biased_features = [\n",
     "    col for col in data.columns\n",
-    "    if any(col.startswith(p) for p in biased_prefixes)\n",
+    "    if col != 'checked' and any(col.startswith(p) for p in biased_prefixes)\n",
     "]\n",
     "\n",
     "y = data['checked']\n",
     "X = data.drop(['checked'], axis=1)\n",
-    "X = data[biased_features]\n",
     "X = X.astype(np.float32)\n",
     "\n",
-    "\n",
     "print(\"Number of biased features used:\", len(biased_features))\n",
-    "print(\"Example biased features:\", biased_features[:20])\n",
+    "print(\"Example biased features:\", biased_features[:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66c9adb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BIASED_WEIGHT = 1.5\n",
+    "OTHERS_WEIGHT = 0.5\n",
     "\n",
+    "feature_weights = {}\n",
+    "for feature in X.columns:\n",
+    "    if feature in biased_features:\n",
+    "        feature_weights[feature] = BIASED_WEIGHT # Higher weight for biased features\n",
+    "    else:\n",
+    "        feature_weights[feature] = OTHERS_WEIGHT # Lower weight for other features\n",
     "\n",
+    "X_weighted = X.copy()\n",
+    "for feature in X.columns:\n",
+    "    X_weighted[feature] *= feature_weights[feature]\n",
     "\n",
-    "# # Let's specify the features and the target\n",
-    "# y = data['checked']\n",
-    "# X = data.drop(['checked'], axis=1)\n",
-    "# X = X.astype(np.float32)\n",
-    "\n",
-    "# for col in discriminative_features:\n",
-    "#     if df[col].dtype == \"object\":\n",
-    "#         X[col] = X[col].astype(\"category\").cat.codes\n",
-    "\n",
-    "# Let's split the dataset into train and test\n",
+    "print(f\"Original feature matrix shape: {X.shape}\")\n",
+    "print(f\"Weighted feature matrix shape: {X_weighted.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56601343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the dataset into train and test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)"
    ]
   },
@@ -122,47 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "eaf5a3c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a gradient boosting classifier\n",
-    "\n",
     "# classifier = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0, max_depth=1, random_state=0)\n",
     "bad_model = Pipeline([\n",
     "    (\"scaler\", StandardScaler(with_mean=False)),  \n",
     "    (\"gb\", GradientBoostingClassifier(\n",
     "        n_estimators=200,\n",
     "        learning_rate=0.05,\n",
-    "        max_depth=3\n",
+    "        max_depth=3,\n",
+    "        random_state=42\n",
     "    ))\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5cc71dde",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Create a pipeline object with our selector and classifier\n",
-    "# NOTE: You can create custom pipeline objects but they must be registered to onnx or it will not recognise them\n",
-    "# Because of this we recommend using the onnx known objects as defined in the documentation\n",
-    "\n",
-    "# pipeline = Pipeline(steps=[('feature selection', selector), ('classification', classifier)])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6cb91aea",
    "metadata": {
     "collapsed": false,
@@ -200,17 +199,9 @@
     }
    ],
    "source": [
-    "# Let's train a simple model\n",
-    "# pipeline.fit(X_train, y_train)\n",
-    "\n",
+    "# Train the model\n",
     "bad_model.fit(X_train, y_train)\n",
-    "\n",
-    "\n",
-    "# # Let's evaluate the model\n",
-    "# y_pred = pipeline.predict(X_test)\n",
-    "# original_accuracy = accuracy_score(y_test, y_pred)\n",
-    "# print('Accuracy of the original model: ', original_accuracy)\n",
-    "\n",
+    "# Predictions on test set\n",
     "y_pred = bad_model.predict(X_test)\n",
     "\n",
     "print(\"Classification Report:\\n\")\n",
@@ -228,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "96b1b390",
    "metadata": {},
    "outputs": [
@@ -241,11 +232,7 @@
     }
    ],
    "source": [
-    "# Let's convert the model to ONNX\n",
-    "# onnx_model = convert_sklearn(\n",
-    "#     pipeline, initial_types=[('X', FloatTensorType((None, X.shape[1])))],\n",
-    "#     target_opset=12)\n",
-    "\n",
+    "# Convert the model to ONNX\n",
     "onnx_model = convert_sklearn(\n",
     "    bad_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))],\n",
     "    target_opset=12)\n",
@@ -285,48 +272,6 @@
     "accuracy_onnx_model = accuracy_score(y_test, y_pred_onnx2[0])\n",
     "print('Accuracy of the ONNX model: ', accuracy_onnx_model)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e76e5b03-e52f-4ced-bcaa-ab93c4d4d11b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bad_model = GradientBoostingClassifier(\n",
-    "#     n_estimators=200,\n",
-    "#     learning_rate=0.05,\n",
-    "#     max_depth=3\n",
-    "# )\n",
-    "\n",
-    "# bad_model.fit(X_train, y_train)\n",
-    "# y_pred = bad_model.predict(X_test)\n",
-    "\n",
-    "# print(classification_report(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b6ae6fc-e980-4ece-9147-e2e614208dea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importances = pd.DataFrame({\n",
-    "#     \"feature\": X.columns,\n",
-    "#     \"importance\": bad_model.feature_importances_\n",
-    "# }).sort_values(\"importance\", ascending=False)\n",
-    "\n",
-    "# print(importances.head(20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60d96d05-c25c-498e-a039-293d2006cf9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
