--- a/subgroup_2/models.ipynb
+++ b/subgroup_2/models.ipynb
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "0bba2d9a",
    "metadata": {},
    "outputs": [
@@ -1141,7 +1141,7 @@
     "auc = roc_auc_score(y_test, y_proba)\n",
     "tn, fp, fn, tp = confusion_matrix(y_test, y_pred, labels=[0, 1]).ravel()\n",
     "\n",
-    "print(\"\\n=== GOOD MODEL PERFORMANCE ===\")\n",
+    "print(\"\\n=== BAD MODEL PERFORMANCE ===\")\n",
     "print(f\"Accuracy:  {acc:.4f}\")\n",
     "print(f\"AUC:       {auc:.4f}\")\n",
     "print(f\"TN={tn} FP={fp} FN={fn} TP={tp}\")\n",
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f006e540",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1165,7 @@
    "source": [
     "# Let's convert the model to ONNX\n",
     "onnx_model = convert_sklearn(\n",
-    "    good_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))],\n",
+    "    bad_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))],\n",
     "    target_opset=12)\n",
     "\n",
     "# Let's check the accuracy of the converted model\n",
