--- a/subgroup_2/models.ipynb
+++ b/subgroup_2/models.ipynb
@@ -1952,11 +1952,343 @@
     "tester = PartitionTester(\"../data/synth_data_for_training.csv\")\n",
     "tester.run(\"model_1.onnx\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "eeaaec0a-6e65-4aae-89a2-3a37d907832a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ">>> Loading Data...\n",
+      "Total Features: 315\n",
+      "Features in Bad Model (Biased): 186\n",
+      "Features in Good Model (Rest):  129\n",
+      "\n",
+      ">>> Training GOOD Model (Uses All - Bad)...\n",
+      "\n",
+      "=== GOOD MODEL PERFORMANCE ===\n",
+      "Accuracy:  0.9058\n",
+      "AUC:       0.8391\n",
+      "TN=2801 FP=55 FN=243 TP=63\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      0.98      0.95      2856\n",
+      "           1       0.53      0.21      0.30       306\n",
+      "\n",
+      "    accuracy                           0.91      3162\n",
+      "   macro avg       0.73      0.59      0.62      3162\n",
+      "weighted avg       0.88      0.91      0.89      3162\n",
+      "\n",
+      "Saved model_1.onnx\n",
+      "\n",
+      ">>> Training BAD Model (Uses ONLY Bad)...\n",
+      "\n",
+      "=== BAD MODEL PERFORMANCE ===\n",
+      "Accuracy:  0.9178\n",
+      "AUC:       0.9176\n",
+      "TN=2807 FP=49 FN=211 TP=95\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.98      0.96      2856\n",
+      "           1       0.66      0.31      0.42       306\n",
+      "\n",
+      "    accuracy                           0.92      3162\n",
+      "   macro avg       0.79      0.65      0.69      3162\n",
+      "weighted avg       0.90      0.92      0.90      3162\n",
+      "\n",
+      "Saved model_2.onnx\n",
+      "\n",
+      "--- Partition Tests for model_1.onnx ---\n",
+      "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "men                       | 1995  | 10.0%   | 7.1%   | 95.8%\n",
+      "women                     | 1799  | 10.0%   | 6.6%   | 96.2%\n",
+      "young_adults              | 153   | 24.8%   | 19.6%   | 93.5%\n",
+      "seniors                   | 684   | 8.2%   | 3.8%   | 95.6%\n",
+      "understands_dutch         | 136   | 5.9%   | 5.1%   | 94.9%\n",
+      "no_dutch                  | 3658  | 10.2%   | 6.9%   | 96.1%\n",
+      "charlois                  | 363   | 8.5%   | 5.5%   | 96.4%\n",
+      "kralingen                 | 172   | 9.3%   | 6.4%   | 97.1%\n",
+      "\n",
+      "--- Partition Tests for model_2.onnx ---\n",
+      "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "men                       | 1995  | 10.0%   | 8.6%   | 97.4%\n",
+      "women                     | 1799  | 10.0%   | 8.8%   | 98.3%\n",
+      "young_adults              | 153   | 24.8%   | 26.1%   | 97.4%\n",
+      "seniors                   | 684   | 8.2%   | 7.2%   | 98.1%\n",
+      "understands_dutch         | 136   | 5.9%   | 2.9%   | 97.1%\n",
+      "no_dutch                  | 3658  | 10.2%   | 8.9%   | 97.9%\n",
+      "charlois                  | 363   | 8.5%   | 8.0%   | 98.3%\n",
+      "kralingen                 | 172   | 9.3%   | 7.6%   | 98.3%\n",
+      "\n",
+      "--- Metamorphic Tests for model_1.onnx ---\n",
+      "Gender Flip                    | Flips: 0    (0.00%)\n",
+      "Language Flip                  | Flips: 0    (0.00%)\n",
+      "\n",
+      "--- Metamorphic Tests for model_2.onnx ---\n",
+      "Gender Flip                    | Flips: 3    (0.08%)\n",
+      "Language Flip                  | Flips: 9    (0.24%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import onnx\n",
+    "import onnxruntime as ort\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix\n",
+    "from skl2onnx import convert_sklearn\n",
+    "from skl2onnx.common.data_types import FloatTensorType\n",
+    "\n",
+    "# ==========================================\n",
+    "# CONFIGURATION\n",
+    "# ==========================================\n",
+    "DATA_PATH = \"../data/synth_data_for_training.csv\"\n",
+    "MODEL_1_PATH = \"model_1.onnx\"  # Good Model\n",
+    "MODEL_2_PATH = \"model_2.onnx\"  # Bad Model\n",
+    "\n",
+    "# ==========================================\n",
+    "# FEATURE SPLIT DEFINITION\n",
+    "# ==========================================\n",
+    "\n",
+    "# We define ONLY the bad prefixes.\n",
+    "# The Good Model will automatically get everything else.\n",
+    "BAD_PREFIXES = [\n",
+    "    \"adres_\",                      # Neighborhood (Location bias)\n",
+    "    \"persoonlijke_\",               # Language, etc.\n",
+    "    \"relatie_\",                    # Marital status, children\n",
+    "    \"belemmering_\",                # Personal obstacles\n",
+    "    \"beschikbaarheid_\",            # Availability\n",
+    "    \"contacten_\",                  # General contacts\n",
+    "    \"persoon_\"                     # Age, Gender\n",
+    "]\n",
+    "\n",
+    "# ==========================================\n",
+    "# PART 1: CLASS DEFINITIONS (TESTERS)\n",
+    "# ==========================================\n",
+    "\n",
+    "class PartitionTester:\n",
+    "    def __init__(self, data_path):\n",
+    "        self.DATA_PATH = data_path\n",
+    "        self.TARGET = \"checked\"\n",
+    "\n",
+    "        # Load & Prepare Data\n",
+    "        try:\n",
+    "            df = pd.read_csv(self.DATA_PATH)\n",
+    "        except:\n",
+    "            df_raw = pd.read_csv(self.DATA_PATH, header=None)\n",
+    "            colnames = df_raw.iloc[0].tolist()\n",
+    "            df = pd.read_csv(self.DATA_PATH, skiprows=1, names=colnames)\n",
+    "\n",
+    "        df[self.TARGET] = pd.to_numeric(df[self.TARGET], errors=\"coerce\")\n",
+    "        df = df.dropna(subset=[self.TARGET]).copy()\n",
+    "        df[self.TARGET] = df[self.TARGET].astype(int)\n",
+    "\n",
+    "        X = df.drop(columns=[self.TARGET]).apply(pd.to_numeric, errors=\"coerce\").fillna(0)\n",
+    "        y = df[self.TARGET]\n",
+    "\n",
+    "        _, self.X_test, _, self.y_test = train_test_split(\n",
+    "            X, y, test_size=0.3, random_state=42, stratify=y\n",
+    "        )\n",
+    "\n",
+    "        # Define Partitions\n",
+    "        self.partitions = [\n",
+    "            {\"name\": \"men\", \"condition\": lambda df: df['persoon_geslacht_vrouw'] == 0},\n",
+    "            {\"name\": \"women\", \"condition\": lambda df: df['persoon_geslacht_vrouw'] == 1},\n",
+    "            {\"name\": \"young_adults\", \"condition\": lambda df: df['persoon_leeftijd_bij_onderzoek'] < 30},\n",
+    "            {\"name\": \"seniors\", \"condition\": lambda df: df['persoon_leeftijd_bij_onderzoek'] >= 60},\n",
+    "            {\"name\": \"understands_dutch\", \"condition\": lambda df: df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1},\n",
+    "            {\"name\": \"no_dutch\", \"condition\": lambda df: df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0},\n",
+    "            {\"name\": \"charlois\", \"condition\": lambda df: df['adres_recentste_wijk_charlois'] == 1},\n",
+    "            {\"name\": \"kralingen\", \"condition\": lambda df: df['adres_recentste_wijk_kralingen_c'] == 1},\n",
+    "        ]\n",
+    "\n",
+    "    def _load_model(self, m):\n",
+    "        if isinstance(m, str):\n",
+    "            return ort.InferenceSession(m, providers=[\"CPUExecutionProvider\"])\n",
+    "        return m\n",
+    "\n",
+    "    def _predict(self, model, X_part):\n",
+    "        if hasattr(model, \"predict\"):\n",
+    "            return model.predict(X_part)\n",
+    "        elif isinstance(model, ort.InferenceSession):\n",
+    "            input_name = model.get_inputs()[0].name\n",
+    "            X_np = X_part.to_numpy().astype(np.float32)\n",
+    "            outputs = model.run(None, {input_name: X_np})\n",
+    "            label_idx = 0\n",
+    "            for i, o in enumerate(model.get_outputs()):\n",
+    "                if \"label\" in o.name.lower(): label_idx = i\n",
+    "            return np.array(outputs[label_idx]).astype(int).flatten()\n",
+    "\n",
+    "    def run(self, model_path):\n",
+    "        print(f\"\\n--- Partition Tests for {model_path} ---\")\n",
+    "        model = self._load_model(model_path)\n",
+    "        \n",
+    "        print(f\"{'Partition':<25} | {'N':<5} | {'Fraud%':<8} | {'Pred%':<8} | {'Accuracy':<8}\")\n",
+    "        print(\"-\" * 65)\n",
+    "\n",
+    "        for part in self.partitions:\n",
+    "            cond = part[\"condition\"]\n",
+    "            df_part = self.X_test[cond(self.X_test)]\n",
+    "            if df_part.empty: continue\n",
+    "\n",
+    "            preds = self._predict(model, df_part)\n",
+    "            idx = df_part.index\n",
+    "            true_labels = self.y_test.loc[idx].astype(int)\n",
+    "            acc = accuracy_score(true_labels, preds)\n",
+    "            print(f\"{part['name']:<25} | {len(df_part):<5} | {true_labels.mean()*100:.1f}%   | {preds.mean()*100:.1f}%   | {acc*100:.1f}%\")\n",
+    "\n",
+    "\n",
+    "class MetamorphicTester:\n",
+    "    def __init__(self, data_path):\n",
+    "        pt = PartitionTester(data_path)\n",
+    "        self.X_base = pt.X_test.copy()\n",
+    "        self.helper = pt\n",
+    "\n",
+    "    def _calculate_violations(self, name, original_preds, new_preds):\n",
+    "        violations = np.sum(original_preds != new_preds)\n",
+    "        rate = (violations / len(original_preds)) * 100\n",
+    "        print(f\"{name:<30} | Flips: {violations:<4} ({rate:.2f}%)\")\n",
+    "\n",
+    "    def run(self, model_path):\n",
+    "        print(f\"\\n--- Metamorphic Tests for {model_path} ---\")\n",
+    "        model = self.helper._load_model(model_path)\n",
+    "        preds_base = self.helper._predict(model, self.X_base)\n",
+    "\n",
+    "        # Test 1: Gender Flip\n",
+    "        X_mutant = self.X_base.copy()\n",
+    "        X_mutant['persoon_geslacht_vrouw'] = 1 - X_mutant['persoon_geslacht_vrouw']\n",
+    "        preds_mut = self.helper._predict(model, X_mutant)\n",
+    "        self._calculate_violations(\"Gender Flip\", preds_base, preds_mut)\n",
+    "\n",
+    "        # Test 2: Language Flip\n",
+    "        if 'persoonlijke_eigenschappen_nl_begrijpen3' in self.X_base.columns:\n",
+    "            X_mutant = self.X_base.copy()\n",
+    "            X_mutant['persoonlijke_eigenschappen_nl_begrijpen3'] = 1 - X_mutant['persoonlijke_eigenschappen_nl_begrijpen3']\n",
+    "            preds_mut = self.helper._predict(model, X_mutant)\n",
+    "            self._calculate_violations(\"Language Flip\", preds_base, preds_mut)\n",
+    "\n",
+    "\n",
+    "# ==========================================\n",
+    "# PART 2: MODEL TRAINING\n",
+    "# ==========================================\n",
+    "\n",
+    "def train_and_save_models():\n",
+    "    print(\"\\n>>> Loading Data...\")\n",
+    "    df = pd.read_csv(DATA_PATH)\n",
+    "    y = df['checked']\n",
+    "    X = df.drop(['checked'], axis=1).astype(np.float32)\n",
+    "    \n",
+    "    # --- LOGIC START: STRICT SPLIT ---\n",
+    "    all_features = list(X.columns)\n",
+    "    \n",
+    "    # 1. Identify Bad Indices (Starts with BAD_PREFIXES)\n",
+    "    bad_indices = [\n",
+    "        i for i, c in enumerate(all_features) \n",
+    "        if any(c.startswith(p) for p in BAD_PREFIXES)\n",
+    "    ]\n",
+    "    \n",
+    "    # 2. Identify Good Indices (Everything NOT in bad_indices)\n",
+    "    good_indices = [\n",
+    "        i for i in range(len(all_features)) \n",
+    "        if i not in bad_indices\n",
+    "    ]\n",
+    "    \n",
+    "    # Sanity Check\n",
+    "    print(f\"Total Features: {len(all_features)}\")\n",
+    "    print(f\"Features in Bad Model (Biased): {len(bad_indices)}\")\n",
+    "    print(f\"Features in Good Model (Rest):  {len(good_indices)}\")\n",
+    "    # --- LOGIC END ---\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "    # ---------------- GOOD MODEL ----------------\n",
+    "    print(\"\\n>>> Training GOOD Model (Uses All - Bad)...\")\n",
+    "    \n",
+    "    good_model = Pipeline([\n",
+    "        ('selector', ColumnTransformer([('keep', 'passthrough', good_indices)], remainder='drop')),\n",
+    "        ('scaler', StandardScaler(with_mean=False)),\n",
+    "        ('gb', GradientBoostingClassifier(n_estimators=200, max_depth=5, random_state=42))\n",
+    "    ])\n",
+    "    good_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Eval Good Model\n",
+    "    y_pred = good_model.predict(X_test)\n",
+    "    y_proba = good_model.predict_proba(X_test)[:, 1]\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    auc = roc_auc_score(y_test, y_proba)\n",
+    "    tn, fp, fn, tp = confusion_matrix(y_test, y_pred, labels=[0, 1]).ravel()\n",
+    "    \n",
+    "    print(\"\\n=== GOOD MODEL PERFORMANCE ===\")\n",
+    "    print(f\"Accuracy:  {acc:.4f}\")\n",
+    "    print(f\"AUC:       {auc:.4f}\")\n",
+    "    print(f\"TN={tn} FP={fp} FN={fn} TP={tp}\")\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "    onnx_good = convert_sklearn(good_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))], target_opset=12)\n",
+    "    with open(MODEL_1_PATH, \"wb\") as f: f.write(onnx_good.SerializeToString())\n",
+    "    print(f\"Saved {MODEL_1_PATH}\")\n",
+    "\n",
+    "    # ---------------- BAD MODEL ----------------\n",
+    "    print(\"\\n>>> Training BAD Model (Uses ONLY Bad)...\")\n",
+    "    \n",
+    "    bad_model = Pipeline([\n",
+    "        ('selector', ColumnTransformer([('keep', 'passthrough', bad_indices)], remainder='drop')),\n",
+    "        ('scaler', StandardScaler(with_mean=False)),\n",
+    "        # Slightly stronger parameters to help it overfit to the biases\n",
+    "        ('gb', GradientBoostingClassifier(n_estimators=300, max_depth=6, random_state=42))\n",
+    "    ])\n",
+    "    bad_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Eval Bad Model\n",
+    "    y_pred_bad = bad_model.predict(X_test)\n",
+    "    y_proba_bad = bad_model.predict_proba(X_test)[:, 1]\n",
+    "    acc_bad = accuracy_score(y_test, y_pred_bad)\n",
+    "    auc_bad = roc_auc_score(y_test, y_proba_bad)\n",
+    "    tn, fp, fn, tp = confusion_matrix(y_test, y_pred_bad, labels=[0, 1]).ravel()\n",
+    "    \n",
+    "    print(\"\\n=== BAD MODEL PERFORMANCE ===\")\n",
+    "    print(f\"Accuracy:  {acc_bad:.4f}\")\n",
+    "    print(f\"AUC:       {auc_bad:.4f}\")\n",
+    "    print(f\"TN={tn} FP={fp} FN={fn} TP={tp}\")\n",
+    "    print(classification_report(y_test, y_pred_bad))\n",
+    "\n",
+    "    onnx_bad = convert_sklearn(bad_model, initial_types=[('X', FloatTensorType((None, X.shape[1])))], target_opset=12)\n",
+    "    with open(MODEL_2_PATH, \"wb\") as f: f.write(onnx_bad.SerializeToString())\n",
+    "    print(f\"Saved {MODEL_2_PATH}\")\n",
+    "\n",
+    "\n",
+    "# ==========================================\n",
+    "# PART 3: MAIN EXECUTION\n",
+    "# ==========================================\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    train_and_save_models()\n",
+    "\n",
+    "    pt = PartitionTester(DATA_PATH)\n",
+    "    pt.run(MODEL_1_PATH)\n",
+    "    pt.run(MODEL_2_PATH)\n",
+    "\n",
+    "    mt = MetamorphicTester(DATA_PATH)\n",
+    "    mt.run(MODEL_1_PATH)\n",
+    "    mt.run(MODEL_2_PATH)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1970,7 +2302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
