--- a/subgroup_2/models.ipynb
+++ b/subgroup_2/models.ipynb
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "eeaaec0a-6e65-4aae-89a2-3a37d907832a",
    "metadata": {},
    "outputs": [
@@ -1966,74 +1966,74 @@
       "\n",
       ">>> Loading Data...\n",
       "Total Features: 315\n",
-      "Features in Bad Model (Biased): 186\n",
-      "Features in Good Model (Rest):  129\n",
+      "Features in Bad Model (Biased): 44\n",
+      "Features in Good Model (Rest):  271\n",
       "\n",
       ">>> Training GOOD Model (Uses All - Bad)...\n",
       "\n",
       "=== GOOD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.9058\n",
-      "AUC:       0.8391\n",
-      "TN=2801 FP=55 FN=243 TP=63\n",
+      "Accuracy:  0.9273\n",
+      "AUC:       0.9002\n",
+      "TN=2823 FP=33 FN=197 TP=109\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.98      0.95      2856\n",
-      "           1       0.53      0.21      0.30       306\n",
+      "           0       0.93      0.99      0.96      2856\n",
+      "           1       0.77      0.36      0.49       306\n",
       "\n",
-      "    accuracy                           0.91      3162\n",
-      "   macro avg       0.73      0.59      0.62      3162\n",
-      "weighted avg       0.88      0.91      0.89      3162\n",
+      "    accuracy                           0.93      3162\n",
+      "   macro avg       0.85      0.67      0.72      3162\n",
+      "weighted avg       0.92      0.93      0.91      3162\n",
       "\n",
       "Saved model_1.onnx\n",
       "\n",
       ">>> Training BAD Model (Uses ONLY Bad)...\n",
       "\n",
       "=== BAD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.9178\n",
-      "AUC:       0.9176\n",
-      "TN=2807 FP=49 FN=211 TP=95\n",
+      "Accuracy:  0.8887\n",
+      "AUC:       0.7688\n",
+      "TN=2775 FP=81 FN=271 TP=35\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      0.98      0.96      2856\n",
-      "           1       0.66      0.31      0.42       306\n",
+      "           0       0.91      0.97      0.94      2856\n",
+      "           1       0.30      0.11      0.17       306\n",
       "\n",
-      "    accuracy                           0.92      3162\n",
-      "   macro avg       0.79      0.65      0.69      3162\n",
-      "weighted avg       0.90      0.92      0.90      3162\n",
+      "    accuracy                           0.89      3162\n",
+      "   macro avg       0.61      0.54      0.55      3162\n",
+      "weighted avg       0.85      0.89      0.87      3162\n",
       "\n",
       "Saved model_2.onnx\n",
       "\n",
       "--- Partition Tests for model_1.onnx ---\n",
       "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
       "-----------------------------------------------------------------\n",
-      "men                       | 1995  | 10.0%   | 7.1%   | 95.8%\n",
-      "women                     | 1799  | 10.0%   | 6.6%   | 96.2%\n",
-      "young_adults              | 153   | 24.8%   | 19.6%   | 93.5%\n",
-      "seniors                   | 684   | 8.2%   | 3.8%   | 95.6%\n",
-      "understands_dutch         | 136   | 5.9%   | 5.1%   | 94.9%\n",
-      "no_dutch                  | 3658  | 10.2%   | 6.9%   | 96.1%\n",
-      "charlois                  | 363   | 8.5%   | 5.5%   | 96.4%\n",
-      "kralingen                 | 172   | 9.3%   | 6.4%   | 97.1%\n",
+      "men                       | 1995  | 10.0%   | 8.5%   | 97.6%\n",
+      "women                     | 1799  | 10.0%   | 8.4%   | 98.1%\n",
+      "young_adults              | 153   | 24.8%   | 24.2%   | 98.0%\n",
+      "seniors                   | 684   | 8.2%   | 5.4%   | 96.9%\n",
+      "understands_dutch         | 136   | 5.9%   | 3.7%   | 97.8%\n",
+      "no_dutch                  | 3658  | 10.2%   | 8.6%   | 97.8%\n",
+      "charlois                  | 363   | 8.5%   | 6.9%   | 97.8%\n",
+      "kralingen                 | 172   | 9.3%   | 8.1%   | 98.8%\n",
       "\n",
       "--- Partition Tests for model_2.onnx ---\n",
       "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
       "-----------------------------------------------------------------\n",
-      "men                       | 1995  | 10.0%   | 8.6%   | 97.4%\n",
-      "women                     | 1799  | 10.0%   | 8.8%   | 98.3%\n",
-      "young_adults              | 153   | 24.8%   | 26.1%   | 97.4%\n",
+      "men                       | 1995  | 10.0%   | 7.7%   | 96.0%\n",
+      "women                     | 1799  | 10.0%   | 7.3%   | 96.1%\n",
+      "young_adults              | 153   | 24.8%   | 28.8%   | 92.2%\n",
       "seniors                   | 684   | 8.2%   | 7.2%   | 98.1%\n",
-      "understands_dutch         | 136   | 5.9%   | 2.9%   | 97.1%\n",
-      "no_dutch                  | 3658  | 10.2%   | 8.9%   | 97.9%\n",
-      "charlois                  | 363   | 8.5%   | 8.0%   | 98.3%\n",
-      "kralingen                 | 172   | 9.3%   | 7.6%   | 98.3%\n",
+      "understands_dutch         | 136   | 5.9%   | 2.2%   | 96.3%\n",
+      "no_dutch                  | 3658  | 10.2%   | 7.7%   | 96.0%\n",
+      "charlois                  | 363   | 8.5%   | 6.1%   | 96.4%\n",
+      "kralingen                 | 172   | 9.3%   | 7.0%   | 97.7%\n",
       "\n",
       "--- Metamorphic Tests for model_1.onnx ---\n",
       "Gender Flip                    | Flips: 0    (0.00%)\n",
       "Language Flip                  | Flips: 0    (0.00%)\n",
       "\n",
       "--- Metamorphic Tests for model_2.onnx ---\n",
-      "Gender Flip                    | Flips: 3    (0.08%)\n",
-      "Language Flip                  | Flips: 9    (0.24%)\n"
+      "Gender Flip                    | Flips: 57   (1.50%)\n",
+      "Language Flip                  | Flips: 154  (4.06%)\n"
      ]
     }
    ],
@@ -2065,12 +2065,12 @@
     "# We define ONLY the bad prefixes.\n",
     "# The Good Model will automatically get everything else.\n",
     "BAD_PREFIXES = [\n",
-    "    \"adres_\",                      # Neighborhood (Location bias)\n",
-    "    \"persoonlijke_\",               # Language, etc.\n",
+    "    \"adres_recentste_wijk_\",                      # Neighborhood (Location bias)\n",
+    "    \"persoonlijke_eigenschappen_nl\",               # Language, etc.\n",
     "    \"relatie_\",                    # Marital status, children\n",
-    "    \"belemmering_\",                # Personal obstacles\n",
-    "    \"beschikbaarheid_\",            # Availability\n",
-    "    \"contacten_\",                  # General contacts\n",
+    "    # \"belemmering_\",                # Personal obstacles\n",
+    "    # \"beschikbaarheid_\",            # Availability\n",
+    "    # \"contacten_\",                  # General contacts\n",
     "    \"persoon_\"                     # Age, Gender\n",
     "]\n",
     "\n",
