--- a/subgroup_2/models.ipynb
+++ b/subgroup_2/models.ipynb
@@ -1955,8 +1955,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "eeaaec0a-6e65-4aae-89a2-3a37d907832a",
+   "execution_count": null,
+   "id": "b7994cf1-9700-4eb4-a7a4-697d66eeb1ef",
    "metadata": {},
    "outputs": [
     {
@@ -1969,71 +1969,7 @@
       "Features in Bad Model (Biased): 44\n",
       "Features in Good Model (Rest):  271\n",
       "\n",
-      ">>> Training GOOD Model (Uses All - Bad)...\n",
-      "\n",
-      "=== GOOD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.9273\n",
-      "AUC:       0.9002\n",
-      "TN=2823 FP=33 FN=197 TP=109\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.93      0.99      0.96      2856\n",
-      "           1       0.77      0.36      0.49       306\n",
-      "\n",
-      "    accuracy                           0.93      3162\n",
-      "   macro avg       0.85      0.67      0.72      3162\n",
-      "weighted avg       0.92      0.93      0.91      3162\n",
-      "\n",
-      "Saved model_1.onnx\n",
-      "\n",
-      ">>> Training BAD Model (Uses ONLY Bad)...\n",
-      "\n",
-      "=== BAD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.8887\n",
-      "AUC:       0.7688\n",
-      "TN=2775 FP=81 FN=271 TP=35\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.91      0.97      0.94      2856\n",
-      "           1       0.30      0.11      0.17       306\n",
-      "\n",
-      "    accuracy                           0.89      3162\n",
-      "   macro avg       0.61      0.54      0.55      3162\n",
-      "weighted avg       0.85      0.89      0.87      3162\n",
-      "\n",
-      "Saved model_2.onnx\n",
-      "\n",
-      "--- Partition Tests for model_1.onnx ---\n",
-      "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
-      "-----------------------------------------------------------------\n",
-      "men                       | 1995  | 10.0%   | 8.5%   | 97.6%\n",
-      "women                     | 1799  | 10.0%   | 8.4%   | 98.1%\n",
-      "young_adults              | 153   | 24.8%   | 24.2%   | 98.0%\n",
-      "seniors                   | 684   | 8.2%   | 5.4%   | 96.9%\n",
-      "understands_dutch         | 136   | 5.9%   | 3.7%   | 97.8%\n",
-      "no_dutch                  | 3658  | 10.2%   | 8.6%   | 97.8%\n",
-      "charlois                  | 363   | 8.5%   | 6.9%   | 97.8%\n",
-      "kralingen                 | 172   | 9.3%   | 8.1%   | 98.8%\n",
-      "\n",
-      "--- Partition Tests for model_2.onnx ---\n",
-      "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
-      "-----------------------------------------------------------------\n",
-      "men                       | 1995  | 10.0%   | 7.7%   | 96.0%\n",
-      "women                     | 1799  | 10.0%   | 7.3%   | 96.1%\n",
-      "young_adults              | 153   | 24.8%   | 28.8%   | 92.2%\n",
-      "seniors                   | 684   | 8.2%   | 7.2%   | 98.1%\n",
-      "understands_dutch         | 136   | 5.9%   | 2.2%   | 96.3%\n",
-      "no_dutch                  | 3658  | 10.2%   | 7.7%   | 96.0%\n",
-      "charlois                  | 363   | 8.5%   | 6.1%   | 96.4%\n",
-      "kralingen                 | 172   | 9.3%   | 7.0%   | 97.7%\n",
-      "\n",
-      "--- Metamorphic Tests for model_1.onnx ---\n",
-      "Gender Flip                    | Flips: 0    (0.00%)\n",
-      "Language Flip                  | Flips: 0    (0.00%)\n",
-      "\n",
-      "--- Metamorphic Tests for model_2.onnx ---\n",
-      "Gender Flip                    | Flips: 57   (1.50%)\n",
-      "Language Flip                  | Flips: 154  (4.06%)\n"
+      ">>> Training GOOD Model (Uses All - Bad)...\n"
      ]
     }
    ],
@@ -2104,14 +2040,123 @@
     "\n",
     "        # Define Partitions\n",
     "        self.partitions = [\n",
+    "            # Gender-based partitions\n",
     "            {\"name\": \"men\", \"condition\": lambda df: df['persoon_geslacht_vrouw'] == 0},\n",
     "            {\"name\": \"women\", \"condition\": lambda df: df['persoon_geslacht_vrouw'] == 1},\n",
+    "            # Age-based partitions\n",
     "            {\"name\": \"young_adults\", \"condition\": lambda df: df['persoon_leeftijd_bij_onderzoek'] < 30},\n",
+    "            {\"name\": \"middle_aged\", \"condition\": lambda df: (df['persoon_leeftijd_bij_onderzoek'] >= 30) & (df['persoon_leeftijd_bij_onderzoek'] < 60)},\n",
     "            {\"name\": \"seniors\", \"condition\": lambda df: df['persoon_leeftijd_bij_onderzoek'] >= 60},\n",
+    "            # Family status\n",
+    "            {\"name\": \"single_parents\", \"condition\": lambda df: (df['relatie_kind_heeft_kinderen'] == 1) & (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0)},\n",
+    "            {\"name\": \"married_with_children\", \"condition\": lambda df: (df['relatie_kind_heeft_kinderen'] == 1) & (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 1)},\n",
+    "            {\"name\": \"no_children_no_partner\", \"condition\": lambda df: (df['relatie_kind_heeft_kinderen'] == 0) & (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0)},\n",
+    "            # Marital status\n",
+    "            {\"name\": \"currently_married\", \"condition\": lambda df: df['relatie_partner_huidige_partner___partner__gehuwd_'] == 1},\n",
+    "            {\"name\": \"currently_unmarried_with_partner\", \"condition\": lambda df: df['relatie_partner_aantal_partner___partner__ongehuwd_'] > 0},\n",
+    "            {\"name\": \"currently_single\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0) & \n",
+    "                (df['relatie_partner_aantal_partner___partner__ongehuwd_'] == 0)\n",
+    "            )},\n",
+    "            {\"name\": \"multiple_unmarried_partners\", \"condition\": lambda df: df['relatie_partner_aantal_partner___partner__ongehuwd_'] > 1},\n",
+    "            {\"name\": \"likely_divorced\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_aantal_partner___partner__gehuwd_'] > 0) &  # Had married partner historically\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0)  # Not currently married\n",
+    "            )},\n",
+    "            {\"name\": \"likely_divorced_with_children\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_aantal_partner___partner__gehuwd_'] > 0) &\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0) &\n",
+    "                (df['relatie_kind_heeft_kinderen'] == 1)\n",
+    "            )},\n",
+    "            {\"name\": \"likely_divorced_no_children\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_aantal_partner___partner__gehuwd_'] > 0) &\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0) &\n",
+    "                (df['relatie_kind_heeft_kinderen'] == 0)\n",
+    "            )},\n",
+    "            {\"name\": \"divorced_women\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_aantal_partner___partner__gehuwd_'] > 0) &\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0) &\n",
+    "                (df['persoon_geslacht_vrouw'] == 1)\n",
+    "            )},\n",
+    "            {\"name\": \"divorced_women_with_children\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_aantal_partner___partner__gehuwd_'] > 0) &\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0) &\n",
+    "                (df['persoon_geslacht_vrouw'] == 1) &\n",
+    "                (df['relatie_kind_heeft_kinderen'] == 1)\n",
+    "            )},\n",
+    "            # Currently cohabiting but not married\n",
+    "            {\"name\": \"cohabiting_unmarried\", \"condition\": lambda df: (\n",
+    "                (df['relatie_partner_aantal_partner___partner__ongehuwd_'] > 0) &\n",
+    "                (df['relatie_partner_huidige_partner___partner__gehuwd_'] == 0) &\n",
+    "                (df['relatie_overig_kostendeler'] == 1)  # Cost-sharer = living together\n",
+    "            )},\n",
+    "            # Dutch understanding\n",
     "            {\"name\": \"understands_dutch\", \"condition\": lambda df: df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1},\n",
-    "            {\"name\": \"no_dutch\", \"condition\": lambda df: df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0},\n",
+    "            {\"name\": \"does_not_understand_dutch\", \"condition\": lambda df: df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0},\n",
+    "            # Short time at address + language issues (recent immigrants)\n",
+    "            {\"name\": \"likely_recent_arrival_non_Dutch\", \"condition\": lambda df: (\n",
+    "                (df['adres_dagen_op_adres'] < 365) & \n",
+    "                (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
+    "                (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0)\n",
+    "            )},\n",
+    "            {\"name\": \"likely_recent_arrival_Dutch\", \"condition\": lambda df: (\n",
+    "                (df['adres_dagen_op_adres'] < 365) & \n",
+    "                (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
+    "                (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1)\n",
+    "            )},\n",
+    "            {\"name\": \"less_established_residents_non_Dutch\", \"condition\": lambda df: (\n",
+    "                (df['adres_dagen_op_adres'] < 1825) &\n",
+    "                (df['adres_dagen_op_adres'] >= 365) &\n",
+    "                (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
+    "                (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0)\n",
+    "            )},\n",
+    "            {\"name\": \"less_established_residents_Dutch\", \"condition\": lambda df: (\n",
+    "                (df['adres_dagen_op_adres'] < 1825) &\n",
+    "                (df['adres_dagen_op_adres'] >= 365) &\n",
+    "                (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
+    "                (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1)\n",
+    "            )},\n",
+    "            {\"name\": \"established_residents_non_Dutch\", \"condition\": lambda df: (\n",
+    "                (df['adres_dagen_op_adres'] > 1825) &  # 5+ years\n",
+    "                (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
+    "                (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 0)\n",
+    "            )},\n",
+    "            {\"name\": \"established_residents_Dutch\", \"condition\": lambda df: (\n",
+    "                (df['adres_dagen_op_adres'] > 1825) &  # 5+ years\n",
+    "                (df['adres_recentste_plaats_rotterdam'] == 1) &\n",
+    "                (df['persoonlijke_eigenschappen_nl_begrijpen3'] == 1)\n",
+    "            )},\n",
+    "            # Most recent borough\n",
     "            {\"name\": \"charlois\", \"condition\": lambda df: df['adres_recentste_wijk_charlois'] == 1},\n",
-    "            {\"name\": \"kralingen\", \"condition\": lambda df: df['adres_recentste_wijk_kralingen_c'] == 1},\n",
+    "            {\"name\": \"delfshaven\", \"condition\": lambda df: df['adres_recentste_wijk_delfshaven'] == 1},\n",
+    "            {\"name\": \"feijenoord\", \"condition\": lambda df: df['adres_recentste_wijk_feijenoord'] == 1},\n",
+    "            {\"name\": \"ijsselmonde\", \"condition\": lambda df: df['adres_recentste_wijk_ijsselmonde'] == 1},\n",
+    "            {\"name\": \"kralingen_c\", \"condition\": lambda df: df['adres_recentste_wijk_kralingen_c'] == 1},\n",
+    "            {\"name\": \"noord\", \"condition\": lambda df: df['adres_recentste_wijk_noord'] == 1},\n",
+    "            {\"name\": \"prins_alexa\", \"condition\": lambda df: df['adres_recentste_wijk_prins_alexa'] == 1},\n",
+    "            {\"name\": \"stadscentru\", \"condition\": lambda df: df['adres_recentste_wijk_stadscentru'] == 1},\n",
+    "            # Obstacles\n",
+    "            {\"name\": \"psychological_obstacles\", \"condition\": lambda df: df['belemmering_psychische_problemen'] == 1},\n",
+    "            {\"name\": \"no_psychological_obstacles\", \"condition\": lambda df: df['belemmering_psychische_problemen'] == 0},\n",
+    "            {\"name\": \"living_situation_obstacles\", \"condition\": lambda df: df['belemmering_woonsituatie'] == 1},\n",
+    "            {\"name\": \"no_living_situation_obstacles\", \"condition\": lambda df: df['belemmering_woonsituatie'] == 0},\n",
+    "            {\"name\": \"financial_obstacles\", \"condition\": lambda df: df['belemmering_financiele_problemen'] == 1},\n",
+    "            {\"name\": \"no_financial_obstacles\", \"condition\": lambda df: df['belemmering_financiele_problemen'] == 0},\n",
+    "            # Multiple obstacles\n",
+    "            {\"name\": \"psychological_financial_obstacles\", \"condition\": lambda df: (\n",
+    "                (df['belemmering_psychische_problemen'] == 1) & \n",
+    "                (df['belemmering_financiele_problemen'] == 1)\n",
+    "            )},\n",
+    "            {\"name\": \"psychological_financial_living_obstacles\", \"condition\": lambda df: (\n",
+    "                (df['belemmering_psychische_problemen'] == 1) & \n",
+    "                (df['belemmering_financiele_problemen'] == 1) &\n",
+    "                (df['belemmering_woonsituatie'] == 1)\n",
+    "            )},\n",
+    "            {\"name\": \"no_obstacles\", \"condition\": lambda df: (\n",
+    "                (df['belemmering_psychische_problemen'] == 0) & \n",
+    "                (df['belemmering_financiele_problemen'] == 0) &\n",
+    "                (df['belemmering_woonsituatie'] == 0)\n",
+    "            )},\n",
     "        ]\n",
     "\n",
     "    def _load_model(self, m):\n",
@@ -2284,6 +2329,14 @@
     "    mt.run(MODEL_1_PATH)\n",
     "    mt.run(MODEL_2_PATH)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f36537ba-4740-4442-abaa-4a9427ba08c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
