--- a/subgroup_2/models.ipynb
+++ b/subgroup_2/models.ipynb
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b7994cf1-9700-4eb4-a7a4-697d66eeb1ef",
    "metadata": {},
    "outputs": [
@@ -1969,7 +1969,141 @@
       "Features in Bad Model (Biased): 44\n",
       "Features in Good Model (Rest):  271\n",
       "\n",
-      ">>> Training GOOD Model (Uses All - Bad)...\n"
+      ">>> Training GOOD Model (Uses All - Bad)...\n",
+      "\n",
+      "=== GOOD MODEL PERFORMANCE ===\n",
+      "Accuracy:  0.9273\n",
+      "AUC:       0.9002\n",
+      "TN=2823 FP=33 FN=197 TP=109\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.99      0.96      2856\n",
+      "           1       0.77      0.36      0.49       306\n",
+      "\n",
+      "    accuracy                           0.93      3162\n",
+      "   macro avg       0.85      0.67      0.72      3162\n",
+      "weighted avg       0.92      0.93      0.91      3162\n",
+      "\n",
+      "Saved model_1.onnx\n",
+      "\n",
+      ">>> Training BAD Model (Uses ONLY Bad)...\n",
+      "\n",
+      "=== BAD MODEL PERFORMANCE ===\n",
+      "Accuracy:  0.8887\n",
+      "AUC:       0.7688\n",
+      "TN=2775 FP=81 FN=271 TP=35\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.97      0.94      2856\n",
+      "           1       0.30      0.11      0.17       306\n",
+      "\n",
+      "    accuracy                           0.89      3162\n",
+      "   macro avg       0.61      0.54      0.55      3162\n",
+      "weighted avg       0.85      0.89      0.87      3162\n",
+      "\n",
+      "Saved model_2.onnx\n",
+      "\n",
+      "--- Partition Tests for model_1.onnx ---\n",
+      "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "men                       | 1995  | 10.0%   | 8.5%   | 97.6%\n",
+      "women                     | 1799  | 10.0%   | 8.4%   | 98.1%\n",
+      "young_adults              | 153   | 24.8%   | 24.2%   | 98.0%\n",
+      "middle_aged               | 2957  | 9.7%   | 8.3%   | 98.0%\n",
+      "seniors                   | 684   | 8.2%   | 5.4%   | 96.9%\n",
+      "single_parents            | 1252  | 13.4%   | 11.3%   | 97.9%\n",
+      "married_with_children     | 121   | 10.7%   | 8.3%   | 97.5%\n",
+      "no_children_no_partner    | 2335  | 8.1%   | 6.9%   | 97.9%\n",
+      "currently_married         | 207   | 11.1%   | 8.2%   | 97.1%\n",
+      "currently_unmarried_with_partner | 295   | 10.5%   | 8.8%   | 96.9%\n",
+      "currently_single          | 3314  | 9.9%   | 8.4%   | 97.9%\n",
+      "likely_divorced           | 637   | 10.5%   | 8.6%   | 97.5%\n",
+      "likely_divorced_with_children | 291   | 12.4%   | 10.0%   | 97.6%\n",
+      "likely_divorced_no_children | 346   | 9.0%   | 7.5%   | 97.4%\n",
+      "divorced_women            | 277   | 9.0%   | 7.6%   | 97.8%\n",
+      "divorced_women_with_children | 163   | 10.4%   | 8.0%   | 97.5%\n",
+      "cohabiting_unmarried      | 53    | 15.1%   | 9.4%   | 94.3%\n",
+      "understands_dutch         | 136   | 5.9%   | 3.7%   | 97.8%\n",
+      "does_not_understand_dutch | 3658  | 10.2%   | 8.6%   | 97.8%\n",
+      "likely_recent_arrival_non_Dutch | 49    | 38.8%   | 34.7%   | 95.9%\n",
+      "likely_recent_arrival_Dutch | 1     | 0.0%   | 0.0%   | 100.0%\n",
+      "less_established_residents_non_Dutch | 249   | 13.7%   | 12.4%   | 98.8%\n",
+      "less_established_residents_Dutch | 6     | 16.7%   | 16.7%   | 100.0%\n",
+      "established_residents_non_Dutch | 2991  | 9.4%   | 7.9%   | 97.8%\n",
+      "established_residents_Dutch | 116   | 5.2%   | 2.6%   | 97.4%\n",
+      "charlois                  | 363   | 8.5%   | 6.9%   | 97.8%\n",
+      "delfshaven                | 498   | 12.0%   | 9.8%   | 97.0%\n",
+      "feijenoord                | 685   | 9.9%   | 8.9%   | 97.8%\n",
+      "ijsselmonde               | 165   | 13.3%   | 9.1%   | 95.8%\n",
+      "kralingen_c               | 172   | 9.3%   | 8.1%   | 98.8%\n",
+      "noord                     | 83    | 12.0%   | 9.6%   | 97.6%\n",
+      "prins_alexa               | 146   | 13.0%   | 9.6%   | 96.6%\n",
+      "stadscentru               | 40    | 7.5%   | 5.0%   | 97.5%\n",
+      "psychological_obstacles   | 1815  | 9.0%   | 7.9%   | 98.3%\n",
+      "no_psychological_obstacles | 1979  | 10.9%   | 8.9%   | 97.4%\n",
+      "living_situation_obstacles | 24    | 20.8%   | 16.7%   | 95.8%\n",
+      "no_living_situation_obstacles | 3770  | 9.9%   | 8.4%   | 97.9%\n",
+      "financial_obstacles       | 1163  | 13.8%   | 11.9%   | 97.1%\n",
+      "no_financial_obstacles    | 2631  | 8.4%   | 6.9%   | 98.2%\n",
+      "psychological_financial_obstacles | 722   | 12.3%   | 10.5%   | 97.6%\n",
+      "psychological_financial_living_obstacles | 6     | 16.7%   | 16.7%   | 100.0%\n",
+      "no_obstacles              | 1532  | 9.4%   | 7.4%   | 97.8%\n",
+      "\n",
+      "--- Partition Tests for model_2.onnx ---\n",
+      "Partition                 | N     | Fraud%   | Pred%    | Accuracy\n",
+      "-----------------------------------------------------------------\n",
+      "men                       | 1995  | 10.0%   | 7.7%   | 96.0%\n",
+      "women                     | 1799  | 10.0%   | 7.3%   | 96.1%\n",
+      "young_adults              | 153   | 24.8%   | 28.8%   | 92.2%\n",
+      "middle_aged               | 2957  | 9.7%   | 6.5%   | 95.7%\n",
+      "seniors                   | 684   | 8.2%   | 7.2%   | 98.1%\n",
+      "single_parents            | 1252  | 13.4%   | 10.9%   | 95.3%\n",
+      "married_with_children     | 121   | 10.7%   | 7.4%   | 96.7%\n",
+      "no_children_no_partner    | 2335  | 8.1%   | 5.7%   | 96.4%\n",
+      "currently_married         | 207   | 11.1%   | 7.7%   | 96.6%\n",
+      "currently_unmarried_with_partner | 295   | 10.5%   | 8.1%   | 94.9%\n",
+      "currently_single          | 3314  | 9.9%   | 7.4%   | 96.1%\n",
+      "likely_divorced           | 637   | 10.5%   | 8.6%   | 96.5%\n",
+      "likely_divorced_with_children | 291   | 12.4%   | 11.0%   | 97.9%\n",
+      "likely_divorced_no_children | 346   | 9.0%   | 6.6%   | 95.4%\n",
+      "divorced_women            | 277   | 9.0%   | 6.5%   | 96.0%\n",
+      "divorced_women_with_children | 163   | 10.4%   | 8.6%   | 96.9%\n",
+      "cohabiting_unmarried      | 53    | 15.1%   | 13.2%   | 94.3%\n",
+      "understands_dutch         | 136   | 5.9%   | 2.2%   | 96.3%\n",
+      "does_not_understand_dutch | 3658  | 10.2%   | 7.7%   | 96.0%\n",
+      "likely_recent_arrival_non_Dutch | 49    | 38.8%   | 26.5%   | 83.7%\n",
+      "likely_recent_arrival_Dutch | 1     | 0.0%   | 0.0%   | 100.0%\n",
+      "less_established_residents_non_Dutch | 249   | 13.7%   | 12.4%   | 94.0%\n",
+      "less_established_residents_Dutch | 6     | 16.7%   | 0.0%   | 83.3%\n",
+      "established_residents_non_Dutch | 2991  | 9.4%   | 7.0%   | 96.5%\n",
+      "established_residents_Dutch | 116   | 5.2%   | 2.6%   | 97.4%\n",
+      "charlois                  | 363   | 8.5%   | 6.1%   | 96.4%\n",
+      "delfshaven                | 498   | 12.0%   | 9.0%   | 95.4%\n",
+      "feijenoord                | 685   | 9.9%   | 7.7%   | 96.6%\n",
+      "ijsselmonde               | 165   | 13.3%   | 10.3%   | 95.8%\n",
+      "kralingen_c               | 172   | 9.3%   | 7.0%   | 97.7%\n",
+      "noord                     | 83    | 12.0%   | 7.2%   | 95.2%\n",
+      "prins_alexa               | 146   | 13.0%   | 11.6%   | 97.3%\n",
+      "stadscentru               | 40    | 7.5%   | 5.0%   | 97.5%\n",
+      "psychological_obstacles   | 1815  | 9.0%   | 7.1%   | 96.0%\n",
+      "no_psychological_obstacles | 1979  | 10.9%   | 7.9%   | 96.0%\n",
+      "living_situation_obstacles | 24    | 20.8%   | 8.3%   | 87.5%\n",
+      "no_living_situation_obstacles | 3770  | 9.9%   | 7.5%   | 96.1%\n",
+      "financial_obstacles       | 1163  | 13.8%   | 10.0%   | 94.2%\n",
+      "no_financial_obstacles    | 2631  | 8.4%   | 6.4%   | 96.8%\n",
+      "psychological_financial_obstacles | 722   | 12.3%   | 9.1%   | 94.6%\n",
+      "psychological_financial_living_obstacles | 6     | 16.7%   | 16.7%   | 100.0%\n",
+      "no_obstacles              | 1532  | 9.4%   | 6.9%   | 96.7%\n",
+      "\n",
+      "--- Metamorphic Tests for model_1.onnx ---\n",
+      "Gender Flip                    | Flips: 0    (0.00%)\n",
+      "Language Flip                  | Flips: 0    (0.00%)\n",
+      "Neighborhood Flip (Subset)     | Flips: 0    (0.00%)\n",
+      "\n",
+      "--- Metamorphic Tests for model_2.onnx ---\n",
+      "Gender Flip                    | Flips: 57   (1.50%)\n",
+      "Language Flip                  | Flips: 154  (4.06%)\n",
+      "Neighborhood Flip (Subset)     | Flips: 26   (0.69%)\n"
      ]
     }
    ],
@@ -2193,6 +2327,12 @@
     "            true_labels = self.y_test.loc[idx].astype(int)\n",
     "            acc = accuracy_score(true_labels, preds)\n",
     "            print(f\"{part['name']:<25} | {len(df_part):<5} | {true_labels.mean()*100:.1f}%   | {preds.mean()*100:.1f}%   | {acc*100:.1f}%\")\n",
+    "            tn, fp, fn, tp = confusion_matrix(y_test, y_pred, labels=[0, 1]).ravel()\n",
+    "\n",
+    "print(\"\\n=== BAD MODEL PERFORMANCE ===\")\n",
+    "print(f\"Accuracy:  {acc:.4f}\")\n",
+    "print(f\"AUC:       {auc:.4f}\")\n",
+    "print(f\"TN={tn} FP={fp} FN={fn} TP={tp}\")\n",
     "\n",
     "\n",
     "class MetamorphicTester:\n",
@@ -2212,17 +2352,51 @@
     "        preds_base = self.helper._predict(model, self.X_base)\n",
     "\n",
     "        # Test 1: Gender Flip\n",
+    "        # Swap Male (0) <-> Female (1)\n",
     "        X_mutant = self.X_base.copy()\n",
     "        X_mutant['persoon_geslacht_vrouw'] = 1 - X_mutant['persoon_geslacht_vrouw']\n",
     "        preds_mut = self.helper._predict(model, X_mutant)\n",
     "        self._calculate_violations(\"Gender Flip\", preds_base, preds_mut)\n",
     "\n",
     "        # Test 2: Language Flip\n",
+    "        # Swap Dutch Speaker (1) <-> Non-Speaker (0)\n",
     "        if 'persoonlijke_eigenschappen_nl_begrijpen3' in self.X_base.columns:\n",
     "            X_mutant = self.X_base.copy()\n",
     "            X_mutant['persoonlijke_eigenschappen_nl_begrijpen3'] = 1 - X_mutant['persoonlijke_eigenschappen_nl_begrijpen3']\n",
     "            preds_mut = self.helper._predict(model, X_mutant)\n",
     "            self._calculate_violations(\"Language Flip\", preds_base, preds_mut)\n",
+    "\n",
+    "        # Test 3: Neighborhood Flip (Swap Feijenoord <-> Kralingen)\n",
+    "        # Feijenoord (often flagged risky) <-> Kralingen (often flagged wealthy/safe)\n",
+    "        col_risky = 'adres_recentste_wijk_feijenoord'\n",
+    "        col_safe = 'adres_recentste_wijk_kralingen_c'\n",
+    "        \n",
+    "        if col_risky in self.X_base.columns and col_safe in self.X_base.columns:\n",
+    "            X_mutant = self.X_base.copy()\n",
+    "            \n",
+    "            # Find people who live in EITHER place\n",
+    "            mask = (X_mutant[col_risky] == 1) | (X_mutant[col_safe] == 1)\n",
+    "            \n",
+    "            # Swap them: \n",
+    "            # If they were in Risky, they are now in Safe (0 -> 1 for safe col, 1 -> 0 for risky col)\n",
+    "            # If they were in Safe, they are now in Risky\n",
+    "            # We can just swap the values of the two columns for these rows\n",
+    "            temp = X_mutant.loc[mask, col_risky].copy()\n",
+    "            X_mutant.loc[mask, col_risky] = X_mutant.loc[mask, col_safe]\n",
+    "            X_mutant.loc[mask, col_safe] = temp\n",
+    "            \n",
+    "            # Get predictions for the whole dataset (even though we only changed some rows)\n",
+    "            preds_mut = self.helper._predict(model, X_mutant)\n",
+    "            \n",
+    "            # We only count violations for the rows we actually changed\n",
+    "            # (Otherwise the flip rate looks artificially low because we divide by N total)\n",
+    "            idx_changed = X_mutant[mask].index\n",
+    "            \n",
+    "            # Extract just the changed rows for comparison\n",
+    "            # Note: We need integer indexing for the numpy arrays of predictions\n",
+    "            # But the dataframe has pandas indices. \n",
+    "            # Easier way: Just calculate global flip rate but note it only affects a subset\n",
+    "            self._calculate_violations(\"Neighborhood Flip (Subset)\", preds_base, preds_mut)\n",
     "\n",
     "\n",
     "# ==========================================\n",
