tested other group's stuff

--- a/subgroup_2/models_final.ipynb
+++ b/subgroup_2/models_final.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e93994b1-8d2d-4ac3-9694-baeb27ef2fe6",
    "metadata": {},
    "outputs": [
@@ -451,45 +451,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      ">>> Loading Data...\n",
-      "Total Features: 315\n",
-      "Features in Bad Model (Biased): 44\n",
-      "Features in Good Model (Rest):  271\n",
-      "\n",
-      ">>> Training GOOD Model (Uses All - Bad)...\n",
-      "\n",
-      "=== GOOD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.9273\n",
-      "AUC:       0.9002\n",
-      "TN=2823 FP=33 FN=197 TP=109\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.93      0.99      0.96      2856\n",
-      "           1       0.77      0.36      0.49       306\n",
-      "\n",
-      "    accuracy                           0.93      3162\n",
-      "   macro avg       0.85      0.67      0.72      3162\n",
-      "weighted avg       0.92      0.93      0.91      3162\n",
-      "\n",
-      "Saved model_1.onnx\n",
-      "\n",
-      ">>> Training BAD Model (Uses ONLY Bad)...\n",
-      "\n",
-      "=== BAD MODEL PERFORMANCE ===\n",
-      "Accuracy:  0.8887\n",
-      "AUC:       0.7688\n",
-      "TN=2775 FP=81 FN=271 TP=35\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.91      0.97      0.94      2856\n",
-      "           1       0.30      0.11      0.17       306\n",
-      "\n",
-      "    accuracy                           0.89      3162\n",
-      "   macro avg       0.61      0.54      0.55      3162\n",
-      "weighted avg       0.85      0.89      0.87      3162\n",
-      "\n",
-      "Saved model_2.onnx\n",
       "\n",
       "--- Partition Tests for model_1.onnx ---\n",
       "Partition                           | N     | Acc    | FPR    | FNR    | FP   | FN  \n",
@@ -600,7 +561,136 @@
     "# PART 3: MAIN EXECUTION\n",
     "# ==========================================\n",
     "\n",
-    "train_and_save_models()\n",
+    "# train_and_save_models()\n",
+    "\n",
+    "pt = PartitionTester(DATA_PATH)\n",
+    "pt.run(MODEL_1_PATH)\n",
+    "pt.run(MODEL_2_PATH)\n",
+    "\n",
+    "mt = MetamorphicTester(DATA_PATH)\n",
+    "mt.run(MODEL_1_PATH)\n",
+    "mt.run(MODEL_2_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3bf80515-b917-4350-8843-13d4d48a9708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Partition Tests for ../subgroup_1/model_1.onnx ---\n",
+      "Partition                           | N     | Acc    | FPR    | FNR    | FP   | FN  \n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "men                                 | 1995  | 97.3% | 0.4% | 22.5% | 8    | 45  \n",
+      "women                               | 1799  | 96.7% | 0.1% | 31.7% | 2    | 57  \n",
+      "young_adults                        | 153   | 95.4% | 0.9% | 15.8% | 1    | 6   \n",
+      "middle_aged                         | 2957  | 97.2% | 0.3% | 25.9% | 9    | 74  \n",
+      "seniors                             | 684   | 96.8% | 0.0% | 39.3% | 0    | 22  \n",
+      "single_parents                      | 1252  | 96.6% | 0.3% | 23.2% | 3    | 39  \n",
+      "married_with_children               | 121   | 97.5% | 0.0% | 23.1% | 0    | 3   \n",
+      "no_children_no_partner              | 2335  | 97.3% | 0.3% | 30.2% | 7    | 57  \n",
+      "currently_married                   | 207   | 97.1% | 0.0% | 26.1% | 0    | 6   \n",
+      "currently_unmarried_with_partner    | 295   | 96.3% | 0.0% | 35.5% | 0    | 11  \n",
+      "currently_single                    | 3314  | 97.1% | 0.3% | 25.9% | 10   | 85  \n",
+      "likely_divorced                     | 637   | 96.2% | 0.9% | 28.4% | 5    | 19  \n",
+      "likely_divorced_with_children       | 291   | 95.9% | 0.4% | 30.6% | 1    | 11  \n",
+      "likely_divorced_no_children         | 346   | 96.5% | 1.3% | 25.8% | 4    | 8   \n",
+      "divorced_women                      | 277   | 96.8% | 0.4% | 32.0% | 1    | 8   \n",
+      "divorced_women_with_children        | 163   | 96.9% | 0.0% | 29.4% | 0    | 5   \n",
+      "cohabiting_unmarried                | 53    | 94.3% | 0.0% | 37.5% | 0    | 3   \n",
+      "understands_dutch                   | 136   | 97.8% | 0.8% | 25.0% | 1    | 2   \n",
+      "does_not_understand_dutch           | 3658  | 97.0% | 0.3% | 26.9% | 9    | 100 \n",
+      "likely_recent_arrival_non_Dutch     | 49    | 87.8% | 0.0% | 31.6% | 0    | 6   \n",
+      "likely_recent_arrival_Dutch         | 1     | 100.0% | 0.0% | 0.0% | 0    | 0   \n",
+      "less_established_residents_non_Dutch | 249   | 98.0% | 0.5% | 11.8% | 1    | 4   \n",
+      "less_established_residents_Dutch    | 6     | 100.0% | 0.0% | 0.0% | 0    | 0   \n",
+      "established_residents_non_Dutch     | 2991  | 97.1% | 0.3% | 28.4% | 7    | 80  \n",
+      "established_residents_Dutch         | 116   | 98.3% | 0.0% | 33.3% | 0    | 2   \n",
+      "charlois                            | 363   | 98.6% | 0.0% | 16.1% | 0    | 5   \n",
+      "delfshaven                          | 498   | 96.2% | 0.0% | 31.7% | 0    | 19  \n",
+      "feijenoord                          | 685   | 97.7% | 0.3% | 20.6% | 2    | 14  \n",
+      "ijsselmonde                         | 165   | 95.8% | 0.0% | 31.8% | 0    | 7   \n",
+      "kralingen_c                         | 172   | 97.1% | 0.6% | 25.0% | 1    | 4   \n",
+      "noord                               | 83    | 96.4% | 0.0% | 30.0% | 0    | 3   \n",
+      "prins_alexa                         | 146   | 95.9% | 0.0% | 31.6% | 0    | 6   \n",
+      "stadscentru                         | 40    | 95.0% | 2.7% | 33.3% | 1    | 1   \n",
+      "psychological_obstacles             | 1815  | 97.2% | 0.4% | 26.8% | 7    | 44  \n",
+      "no_psychological_obstacles          | 1979  | 96.9% | 0.2% | 26.9% | 3    | 58  \n",
+      "living_situation_obstacles          | 24    | 91.7% | 0.0% | 40.0% | 0    | 2   \n",
+      "no_living_situation_obstacles       | 3770  | 97.1% | 0.3% | 26.7% | 10   | 100 \n",
+      "financial_obstacles                 | 1163  | 96.2% | 0.5% | 24.4% | 5    | 39  \n",
+      "no_financial_obstacles              | 2631  | 97.4% | 0.2% | 28.6% | 5    | 63  \n",
+      "psychological_financial_obstacles   | 722   | 96.0% | 0.6% | 28.1% | 4    | 25  \n",
+      "psychological_financial_living_obstacles | 6     | 100.0% | 0.0% | 0.0% | 0    | 0   \n",
+      "no_obstacles                        | 1532  | 97.1% | 0.1% | 29.9% | 2    | 43  \n",
+      "\n",
+      "--- Partition Tests for ../subgroup_1/model_2.onnx ---\n",
+      "Partition                           | N     | Acc    | FPR    | FNR    | FP   | FN  \n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "men                                 | 1995  | 83.1% | 17.3% | 14.0% | 310  | 28  \n",
+      "women                               | 1799  | 88.7% | 10.3% | 20.6% | 166  | 37  \n",
+      "young_adults                        | 153   | 83.0% | 20.9% | 5.3% | 24   | 2   \n",
+      "middle_aged                         | 2957  | 85.0% | 15.4% | 11.2% | 411  | 32  \n",
+      "seniors                             | 684   | 89.5% | 6.5% | 55.4% | 41   | 31  \n",
+      "single_parents                      | 1252  | 87.8% | 12.0% | 13.7% | 130  | 23  \n",
+      "married_with_children               | 121   | 83.5% | 16.7% | 15.4% | 18   | 2   \n",
+      "no_children_no_partner              | 2335  | 85.0% | 14.6% | 19.0% | 314  | 36  \n",
+      "currently_married                   | 207   | 81.6% | 17.4% | 26.1% | 32   | 6   \n",
+      "currently_unmarried_with_partner    | 295   | 83.1% | 17.0% | 16.1% | 45   | 5   \n",
+      "currently_single                    | 3314  | 86.2% | 13.5% | 16.5% | 404  | 54  \n",
+      "likely_divorced                     | 637   | 85.7% | 13.5% | 20.9% | 77   | 14  \n",
+      "likely_divorced_with_children       | 291   | 86.9% | 12.2% | 19.4% | 31   | 7   \n",
+      "likely_divorced_no_children         | 346   | 84.7% | 14.6% | 22.6% | 46   | 7   \n",
+      "divorced_women                      | 277   | 89.2% | 9.5% | 24.0% | 24   | 6   \n",
+      "divorced_women_with_children        | 163   | 90.2% | 8.2% | 23.5% | 12   | 4   \n",
+      "cohabiting_unmarried                | 53    | 88.7% | 8.9% | 25.0% | 4    | 2   \n",
+      "understands_dutch                   | 136   | 84.6% | 14.8% | 25.0% | 19   | 2   \n",
+      "does_not_understand_dutch           | 3658  | 85.8% | 13.9% | 16.9% | 457  | 63  \n",
+      "likely_recent_arrival_non_Dutch     | 49    | 79.6% | 26.7% | 10.5% | 8    | 2   \n",
+      "likely_recent_arrival_Dutch         | 1     | 100.0% | 0.0% | 0.0% | 0    | 0   \n",
+      "less_established_residents_non_Dutch | 249   | 77.9% | 24.2% | 8.8% | 52   | 3   \n",
+      "less_established_residents_Dutch    | 6     | 83.3% | 20.0% | 0.0% | 1    | 0   \n",
+      "established_residents_non_Dutch     | 2991  | 86.5% | 12.8% | 20.2% | 346  | 57  \n",
+      "established_residents_Dutch         | 116   | 83.6% | 15.5% | 33.3% | 17   | 2   \n",
+      "charlois                            | 363   | 84.6% | 16.0% | 9.7% | 53   | 3   \n",
+      "delfshaven                          | 498   | 87.3% | 12.1% | 16.7% | 53   | 10  \n",
+      "feijenoord                          | 685   | 82.6% | 17.0% | 20.6% | 105  | 14  \n",
+      "ijsselmonde                         | 165   | 85.5% | 12.6% | 27.3% | 18   | 6   \n",
+      "kralingen_c                         | 172   | 84.3% | 14.1% | 31.2% | 22   | 5   \n",
+      "noord                               | 83    | 88.0% | 13.7% | 0.0% | 10   | 0   \n",
+      "prins_alexa                         | 146   | 86.3% | 10.2% | 36.8% | 13   | 7   \n",
+      "stadscentru                         | 40    | 90.0% | 8.1% | 33.3% | 3    | 1   \n",
+      "psychological_obstacles             | 1815  | 87.1% | 12.8% | 14.0% | 212  | 23  \n",
+      "no_psychological_obstacles          | 1979  | 84.5% | 15.0% | 19.4% | 264  | 42  \n",
+      "living_situation_obstacles          | 24    | 66.7% | 36.8% | 20.0% | 7    | 1   \n",
+      "no_living_situation_obstacles       | 3770  | 85.9% | 13.8% | 17.1% | 469  | 64  \n",
+      "financial_obstacles                 | 1163  | 82.5% | 18.3% | 12.5% | 184  | 20  \n",
+      "no_financial_obstacles              | 2631  | 87.2% | 12.1% | 20.5% | 292  | 45  \n",
+      "psychological_financial_obstacles   | 722   | 83.1% | 17.4% | 13.5% | 110  | 12  \n",
+      "psychological_financial_living_obstacles | 6     | 50.0% | 40.0% | 100.0% | 2    | 1   \n",
+      "no_obstacles                        | 1532  | 85.5% | 13.5% | 23.6% | 188  | 34  \n",
+      "\n",
+      "--- Metamorphic Tests for ../subgroup_1/model_1.onnx ---\n",
+      "Gender Flip                    | Flips: 1    (0.03%)\n",
+      "Language Flip                  | Flips: 0    (0.00%)\n",
+      "Neighborhood Flip (Subset)     | Flips: 0    (0.00%)\n",
+      "\n",
+      "--- Metamorphic Tests for ../subgroup_1/model_2.onnx ---\n",
+      "Gender Flip                    | Flips: 4    (0.11%)\n",
+      "Language Flip                  | Flips: 7    (0.18%)\n",
+      "Neighborhood Flip (Subset)     | Flips: 5    (0.13%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# subgroup 1\n",
+    "MODEL_1_PATH = \"../subgroup_1/model_1.onnx\"  # Good Model\n",
+    "MODEL_2_PATH = \"../subgroup_1/model_2.onnx\"  # Bad Model\n",
     "\n",
     "pt = PartitionTester(DATA_PATH)\n",
     "pt.run(MODEL_1_PATH)\n",
